--- a/sass/layouts/_message-box.scss
+++ b/sass/layouts/_message-box.scss
@@ -123,6 +123,18 @@
 #help-popup.big {
   background-color: #333;
 
+  button {
+    background-color: $color-ws-control-background !important;
+    border-color: $color-ws-control-color !important;
+    color: $color-ws-control-color !important;
+    transition: all 200ms ease-in-out;
+
+    &:hover {
+      background-color: $color-ws-selection !important;
+      color: $color-ws-control-color !important;
+    }
+  }
+
   svg#sections-help {
     fill: white;
   }
